[build-system]
requires = ["setuptools", "wheel", "numpy >= 1.21.0", "mpi4py >= 3.0.0",]
build-backend = "setuptools.build_meta"

[project]
name = "neuroh5"
dynamic = ["version", "description", "entry-points", "maintainers"]
dependencies = [
  "click",
  "h5py >= 3.0",
  "numpy >= 1.21.0",
  "mpi4py >= 3.0.0",
]